--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <body>
     <h1>Interactive Astrology Chart</h1>
     <form id="chartForm">
+        <input type="text" id="name" placeholder="Full Name" required>
         <input type="date" id="birthDate" required>
         <input type="time" id="birthTime" required>
         <input type="text" id="location" placeholder="Location (City, Country)" required>
@@ -44,22 +45,25 @@
         document.getElementById("chartForm").addEventListener("submit", async function (event) {
             event.preventDefault();
 
+            const name = document.getElementById("name").value;
             const birthDate = document.getElementById("birthDate").value;
             const birthTime = document.getElementById("birthTime").value;
             const location = document.getElementById("location").value;
 
-            const apiUrl = "https://astrologychartapi.onrender.com/calculate_chart"; // Replace with your API endpoint
+            const apiUrl = "https://astrologychartapi.onrender.com/calculate_chart";
             const errorMessage = document.getElementById("errorMessage");
             const chartContainer = document.getElementById("chartContainer");
 
             try {
+                // Construct the request payload matching the API format
                 const requestData = {
-                    birthDate: birthDate,
-                    birthTime: birthTime,
-                    location: location,
+                    name: name, // Full name of the user
+                    birth_date: birthDate, // Date of birth in "YYYY-MM-DD" format
+                    birth_time: birthTime, // Time of birth in "HH:MM" format
+                    location: location, // Location in "City, Country" format
                 };
 
-                console.log("Request Data:", requestData);
+                console.log("Request Data (sent to API):", JSON.stringify(requestData));
 
                 // Fetch data from API
                 const response = await fetch(apiUrl, {
@@ -69,6 +73,8 @@
                 });
 
                 if (!response.ok) {
+                    const errorDetails = await response.json();
+                    console.error("API Error Details:", errorDetails);
                     throw new Error(`HTTP error! status: ${response.status}`);
                 }
 
@@ -92,7 +98,7 @@
                 chartContainer.style.display = "block";
                 console.log("Chart rendered successfully!");
             } catch (error) {
-                console.error("Error:", error);
+                console.error("Error fetching or rendering chart data:", error);
                 errorMessage.style.display = "block";
             }
         });
