--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@
                 }
 
                 const apiData = await response.json();
-                console.log("Raw API Response:", apiData);
+                console.log("Raw API Response for Planets:", apiData.planets);
 
                 // Map API data to AstroChart format
                 const chartData = mapApiData(apiData);
                 console.log("Sanitized Planets Data:", chartData.planets);
+                console.log("Sanitized Cusps Data:", chartData.cusps);
 
                 const chart = new astrochart.Chart("chartContainer", 800, 800);
 
@@ -122,7 +123,7 @@
             for (const [arabicName, planetData] of Object.entries(apiData.planets)) {
                 const englishName = planetNameMapping[arabicName];
                 if (englishName && planetData && !isNaN(planetData.longitude)) {
-                    mappedPlanets[englishName] = [planetData.longitude]; // Map longitude to array
+                    mappedPlanets[englishName] = [planetData.longitude];
                 } else {
                     console.warn(`Invalid value for planet ${arabicName}:`, planetData);
                 }
