--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <tbody></tbody>
     </table>
     <script>
-        // Define the mapApiData function
+        // Define mapApiData at the top
         function mapApiData(apiData) {
             const planetNameMapping = {
                 "الشمس": "Sun",
